fix layout problems

--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -79,7 +79,7 @@
   overflow: hidden;
   z-index: 3;
   color: transparent;
- // visibility: hidden;
+  // visibility: hidden;
 }
 
 .b-carouselSeries__prev,
@@ -114,7 +114,7 @@
   color: var(--btn-carousel-color);
   background-color: rgb(0 0 0 / 75%);
   transition: all 0.4s ease;
-  box-shadow: var(--back-color) 10px 0px 50px 10px inset,var(--back-color) 0px 0px 0px 0px inset;
+  box-shadow: var(--back-color) 10px 0px 50px 10px inset, var(--back-color) 0px 0px 0px 0px inset;
 }
 
 .b-carouselSeries__wrap,
@@ -178,6 +178,9 @@
         "descMov";
 }
 
+.movieSeries{
+  border-color: var(--search-back);
+}
 
 .movie:hover {
   transform: scale(1);
@@ -293,16 +296,19 @@
 }
 
 .descr-series {
+  transform: scaleX(0.95);
+  transform: scaleY(1);
   display: -webkit-box;
   //-webkit-line-clamp: 7;
   -webkit-box-orient: vertical;
   overflow-y: auto;
   visibility: hidden;
-  height: 116px;
+  height: 126px;
   width: 320px;
 }
+
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 
@@ -318,32 +324,33 @@
 }
 
 .out-movieSeries:hover > .descr-series {
+
   transition: all .2s ease;
   visibility: visible;
   font-size: calc(.5vw + 8px);
-  padding-block: 42px;
   line-height: 1.5;
   max-width: fit-content;
   font-weight: 350;
   padding-inline: 20px;
   background-color: var(--search-back);
   border-radius: 0 0 10px 10px;
-  margin-top: -36px;
 }
 
 
-.out-movieSeries:hover > .movieSeries{
-  .desc-movSeries{
-    border-bottom-left-radius: 11px;
-    border-bottom-right-radius: 11px;
+.out-movieSeries:hover > .movieSeries {
+  .desc-movSeries {
+    border-radius: 0;
   }
+
   .play__svg {
     display: block;
   }
+
   transform: scale(1);
-  border-radius: 20px;
-  border: 10px solid;
+  border-radius: 8px 8px 0 0;
+  border: 8px solid;
   border-color: var(--search-back);
+
 }
 
 .play__svg {
@@ -413,7 +420,8 @@
     position: relative;
   }
 }
-@media (min-width:1000px) and (max-width: 2000px){
+
+@media (min-width: 1000px) and (max-width: 2000px) {
   .movie {
     height: calc(3vw + 150px);
     grid-template-rows: auto 50px;
@@ -563,10 +571,7 @@
   .topic {
     margin-block: 0;
   }
-  //<<<<<<< HEAD
-  //
-  //=======
-  //>>>>>>> b652892b953911f6127c83bf2938d5c13a350cd8
+
   .b-carouselSeries {
     overflow-x: scroll;
     padding-inline: 0;
@@ -663,14 +668,12 @@
     justify-content: flex-start;
     //=======
   }
-    .play__back {
-      display: none;
-    }
-
-    //      .movieSeries:hover{
-    //
-    //>>>>>>> b652892b953911f6127c83bf2938d5c13a350cd8
+  .play__back {
+    display: none;
   }
+
+
+}
 
 
 @media (max-width: 375px) {
