--- a/src/components/headMovie/headMovie.scss
+++ b/src/components/headMovie/headMovie.scss
@@ -37,7 +37,7 @@
     color: var(--great-rating);
     font-weight: bold;
     font-size: 32px;
-    margin-left: 30px;
+    align-self: center;
 }
 
 .our-name {
